# 251-351-10-

./: .gitignore  MainProject.pro  README.md
backend_server/: .gitignore  CMakeLists.txt  Dockerfile  databasemanager.cpp  databasemanager.h  functionforserver.cpp  functionforserver.h  functionstoserver.cpp  functionstoserver.h  main_server.cpp  mytcpserver.cpp  mytcpserver.h  requesthandler.cpp  requesthandler.h
